# research-agent

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/commands/: create-github.md
src/: __init__.py  orchestrator.py
src/agents/: __init__.py  base.py  editor.py  planner.py  researcher.py  writer.py
src/cli/: __init__.py  main.py
src/hitl/: __init__.py  plan_review.py
src/models/: __init__.py  plan.py  report.py  research.py  state.py
src/prompts/: __init__.py  editor.py  planner.py  researcher.py  writer.py
src/tools/: __init__.py  arxiv.py  base.py  link_analyzer.py  tavily.py  wikipedia.py
src/utils/: __init__.py  config.py  logging.py
